crates/raster/tests/ui/non_main_sequence_native_call.stderr
error[E0425]: cannot find function `child` in this scope
  --> tests/ui/non_main_sequence_native_call.rs:14:13
   |
14 |     let _ = child("Raster".to_string());
   |             ^^^^^ not found in this scope
