crates/raster/tests/ui/non_main_sequence_native_call.rs
use raster::prelude::*;

#[tile]
fn echo(name: String) -> String {
    name
}

#[sequence]
fn child(name: String) -> String {
    call!(echo, name)
}

fn plain_rust() {
    let _ = child("Raster".to_string());
}

fn main() {}
